docs/api/qiskit/0.24/qiskit.transpiler.passes.SabreSwap.mdx
---
title: SabreSwap
description: API reference for qiskit.transpiler.passes.SabreSwap
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.SabreSwap
---

<span id="qiskit-transpiler-passes-sabreswap" />

# qiskit.transpiler.passes.SabreSwap

<Class id="qiskit.transpiler.passes.SabreSwap" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/routing/sabre_swap.py" signature="SabreSwap(*args, **kwargs)">
  Map input circuit onto a backend topology via insertion of SWAPs.

  Implementation of the SWAP-based heuristic search from the SABRE qubit mapping paper \[1] (Algorithm 1). The hueristic aims to minimize the number of lossy SWAPs inserted and the depth of the circuit.

  This algorithm starts from an initial layout of virtual qubits onto physical qubits, and iterates over the circuit DAG until all gates are exhausted, inserting SWAPs along the way. It only considers 2-qubit gates as only those are germane for the mapping problem (it is assumed that 3+ qubit gates are already decomposed).

  In each iteration, it will first check if there are any gates in the `front_layer` that can be directly applied. If so, it will apply them and remove them from `front_layer`, and replenish that layer with new gates if possible. Otherwise, it will try to search for SWAPs, insert the SWAPs, and update the mapping.

  The search for SWAPs is restricted, in the sense that we only consider physical qubits in the neighoborhood of those qubits involved in `front_layer`. These give rise to a `swap_candidate_list` which is scored according to some heuristic cost function. The best SWAP is implemented and `current_layout` updated.

  **References:**

  \[1] Li, Gushu, Yufei Ding, and Yuan Xie. “Tackling the qubit mapping problem for NISQ-era quantum devices.” ASPLOS 2019. [arXiv:1809.02573](https://arxiv.org/pdf/1809.02573.pdf)

  SabreSwap initializer.

  **Parameters**

  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – CouplingMap of the target backend.
  *   **heuristic** (*str*) – The type of heuristic to use when deciding best swap strategy (‘basic’ or ‘lookahead’ or ‘decay’).
  *   **seed** (*int*) – random seed used to tie-break among candidate swaps.

  Additional Information:

  > The search space of possible SWAPs on physical qubits is explored by assigning a score to the layout that would result from each SWAP. The goodness of a layout is evaluated based on how viable it makes the remaining virtual gates that must be applied. A few heuristic cost functions are supported
  >
  > *   ‘basic’:
  >
  > The sum of distances for corresponding physical qubits of interacting virtual qubits in the front\_layer.
  >
  > $$
  > H_{basic} = \sum_{gate \in F} D[\pi(gate.q_1)][\pi(gate.q2)]
  > $$
  >
  > *   ‘lookahead’:
  >
  > This is the sum of two costs: first is the same as the basic cost. Second is the basic cost but now evaluated for the extended set as well (i.e. $|E|$ number of upcoming successors to gates in front\_layer F). This is weighted by some amount EXTENDED\_SET\_WEIGHT (W) to signify that upcoming gates are less important that the front\_layer.
  >
  > $$
  > H_{decay}=\frac{1}{\left|{F}\right|}\sum_{gate \in F} D[\pi(gate.q_1)][\pi(gate.q2)]
  >     + W*\frac{1}{\left|{E}\right|} \sum_{gate \in E} D[\pi(gate.q_1)][\pi(gate.q2)]
  > $$
  >
  > *   ‘decay’:
  >
  > This is the same as ‘lookahead’, but the whole cost is multiplied by a decay factor. This increases the cost if the SWAP that generated the trial layout was recently used (i.e. it penalizes increase in depth).
  >
  > $$
  > \begin{split}H_{decay} = max(decay(SWAP.q_1), decay(SWAP.q_2)) {
  >     \frac{1}{\left|{F}\right|} \sum_{gate \in F} D[\pi(gate.q_1)][\pi(gate.q2)]\\
  >     + W *\frac{1}{\left|{E}\right|} \sum_{gate \in E} D[\pi(gate.q_1)][\pi(gate.q2)]
  >     }\end{split}
  > $$

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.SabreSwap.__init__" name="__init__" signature="__init__(coupling_map, heuristic='basic', seed=None)">
    SabreSwap initializer.

    **Parameters**

    *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – CouplingMap of the target backend.
    *   **heuristic** (*str*) – The type of heuristic to use when deciding best swap strategy (‘basic’ or ‘lookahead’ or ‘decay’).
    *   **seed** (*int*) – random seed used to tie-break among candidate swaps.

    Additional Information:

    > The search space of possible SWAPs on physical qubits is explored by assigning a score to the layout that would result from each SWAP. The goodness of a layout is evaluated based on how viable it makes the remaining virtual gates that must be applied. A few heuristic cost functions are supported
    >
    > *   ‘basic’:
    >
    > The sum of distances for corresponding physical qubits of interacting virtual qubits in the front\_layer.
    >
    > $$
    > H_{basic} = \sum_{gate \in F} D[\pi(gate.q_1)][\pi(gate.q2)]
    > $$
    >
    > *   ‘lookahead’:
    >
    > This is the sum of two costs: first is the same as the basic cost. Second is the basic cost but now evaluated for the extended set as well (i.e. $|E|$ number of upcoming successors to gates in front\_layer F). This is weighted by some amount EXTENDED\_SET\_WEIGHT (W) to signify that upcoming gates are less important that the front\_layer.
    >
    > $$
    > H_{decay}=\frac{1}{\left|{F}\right|}\sum_{gate \in F} D[\pi(gate.q_1)][\pi(gate.q2)]
    >     + W*\frac{1}{\left|{E}\right|} \sum_{gate \in E} D[\pi(gate.q_1)][\pi(gate.q2)]
    > $$
    >
    > *   ‘decay’:
    >
    > This is the same as ‘lookahead’, but the whole cost is multiplied by a decay factor. This increases the cost if the SWAP that generated the trial layout was recently used (i.e. it penalizes increase in depth).
    >
    > $$
    > \begin{split}H_{decay} = max(decay(SWAP.q_1), decay(SWAP.q_2)) {
    >     \frac{1}{\left|{F}\right|} \sum_{gate \in F} D[\pi(gate.q_1)][\pi(gate.q2)]\\
    >     + W *\frac{1}{\left|{E}\right|} \sum_{gate \in E} D[\pi(gate.q_1)][\pi(gate.q2)]
    >     }\end{split}
    > $$
  </Function>

  ## Methods

  |                                                                                                                                             |                                |
  | ------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------ |
  | [`__init__`](#qiskit.transpiler.passes.SabreSwap.__init__ "qiskit.transpiler.passes.SabreSwap.__init__")(coupling\_map\[, heuristic, seed]) | SabreSwap initializer.         |
  | [`name`](#qiskit.transpiler.passes.SabreSwap.name "qiskit.transpiler.passes.SabreSwap.name")()                                              | Return the name of the pass.   |
  | [`run`](#qiskit.transpiler.passes.SabreSwap.run "qiskit.transpiler.passes.SabreSwap.run")(dag)                                              | Run the SabreSwap pass on dag. |

  ## Attributes

  |                                                                                                                                                    |                                             |
  | -------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.SabreSwap.is_analysis_pass "qiskit.transpiler.passes.SabreSwap.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.SabreSwap.is_transformation_pass "qiskit.transpiler.passes.SabreSwap.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.SabreSwap.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.SabreSwap.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.SabreSwap.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.SabreSwap.run" name="run" signature="run(dag)">
    Run the SabreSwap pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the directed acyclic graph to be mapped.

    **Returns**

    A dag mapped to be compatible with the coupling\_map.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

    **Raises**

    *   [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the coupling map or the layout are not
    *   **compatible with the DAG** –
  </Function>
</Class>

